xmonad/.xmonad/xmonad.errors

xmonad.hs:3:1: error:
    Could not load module ‘XMonad’
    It is a member of the package ‘xmonad-0.15-Ak7Jyi3DadrJcCscvsvQYQ’
    which is unusable due to missing dependencies:
      X11-1.9.2-ENktjCLCc4t7wb9UwULJwT data-default-0.7.1.1-IbF6nDffyZnL9pNi4JmXiu
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
3 | import XMonad
  | ^^^^^^^^^^^^^

xmonad.hs:5:1: error:
    Could not load module ‘XMonad.Layout.LayoutModifier’
    It is a member of the package ‘xmonad-contrib-0.16-BkvKruQPvkvJq5em3IDXX7’
    which is unusable due to missing dependencies:
      X11-1.9.2-ENktjCLCc4t7wb9UwULJwT X11-xft-0.3.1-G3eClRMf0wbDIuFNTp1Tcy old-locale-1.0.0.7-LpTuchyagHAP7STZdm71P old-time-1.1.0.3-4WAXseRXxLRKCRu471UUPK xmonad-0.15-Ak7Jyi3DadrJcCscvsvQYQ
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
5 | import XMonad.Layout.LayoutModifier
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:6:1: error:
    Could not load module ‘XMonad.Layout.Spacing’
    It is a member of the package ‘xmonad-contrib-0.16-BkvKruQPvkvJq5em3IDXX7’
    which is unusable due to missing dependencies:
      X11-1.9.2-ENktjCLCc4t7wb9UwULJwT X11-xft-0.3.1-G3eClRMf0wbDIuFNTp1Tcy old-locale-1.0.0.7-LpTuchyagHAP7STZdm71P old-time-1.1.0.3-4WAXseRXxLRKCRu471UUPK xmonad-0.15-Ak7Jyi3DadrJcCscvsvQYQ
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
6 | import XMonad.Layout.Spacing
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:8:1: error:
    Could not load module ‘XMonad.Util.SpawnOnce’
    It is a member of the package ‘xmonad-contrib-0.16-BkvKruQPvkvJq5em3IDXX7’
    which is unusable due to missing dependencies:
      X11-1.9.2-ENktjCLCc4t7wb9UwULJwT X11-xft-0.3.1-G3eClRMf0wbDIuFNTp1Tcy old-locale-1.0.0.7-LpTuchyagHAP7STZdm71P old-time-1.1.0.3-4WAXseRXxLRKCRu471UUPK xmonad-0.15-Ak7Jyi3DadrJcCscvsvQYQ
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
8 | import XMonad.Util.SpawnOnce
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:13:1: error:
    Could not load module ‘XMonad.StackSet’
    It is a member of the package ‘xmonad-0.15-Ak7Jyi3DadrJcCscvsvQYQ’
    which is unusable due to missing dependencies:
      X11-1.9.2-ENktjCLCc4t7wb9UwULJwT data-default-0.7.1.1-IbF6nDffyZnL9pNi4JmXiu
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
13 | import qualified XMonad.StackSet as W
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
